<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.thinlineit.ctrlf.registration.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_graphpaper"
        tools:context=".registration.LoginActivity">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:padding="12dp"
                android:src="@drawable/icon_logo" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.cardview.widget.CardView
            android:id="@+id/loginCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="25dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/loginTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/label_login"
                    android:textColor="@color/black"
                    android:textSize="37sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/loginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/hint_email"
                    android:background="@drawable/background_round_white"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:text="@={viewModel.email}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loginTitle" />

                <EditText
                    android:id="@+id/loginPwd"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:hint="@string/hint_password"
                    android:background="@drawable/background_round_white"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:text="@={viewModel.password}"
                    app:layout_constraintStart_toStartOf="@+id/loginEmail"
                    app:layout_constraintTop_toBottomOf="@+id/loginEmail" />

                <TextView
                    android:id="@+id/loginText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="8dp"
                    android:text="@{viewModel.loginMessage}"
                    android:textColor="@color/red"
                    app:layout_constraintStart_toStartOf="@+id/loginPwd"
                    app:layout_constraintTop_toBottomOf="@+id/loginPwd"
                    tools:text="@string/notice_login_check" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/skyblue"
            android:onClick="@{() -> viewModel.checkLogin()}"
            android:text="@string/button_login"
            app:layout_constraintEnd_toEndOf="@id/loginCardView"
            app:layout_constraintStart_toStartOf="@+id/loginCardView"
            app:layout_constraintTop_toBottomOf="@+id/loginCardView" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:backgroundTint="@color/skyblue"
            android:text="@string/button_register"
            app:layout_constraintStart_toStartOf="@id/loginBtn"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

        <TextView
            android:id="@+id/findId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/button_find_id"
            app:layout_constraintStart_toStartOf="@+id/registerBtn"
            app:layout_constraintTop_toBottomOf="@id/registerBtn" />

        <TextView
            android:id="@+id/findPwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/button_find_password"
            app:layout_constraintStart_toEndOf="@+id/findId"
            app:layout_constraintTop_toTopOf="@+id/findId" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
