<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="issueDetailViewModel"
            type="com.thinlineit.ctrlf.issue.detail.IssueDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                android:elevation="4dp"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/toolbar_main">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:padding="12dp"
                    android:src="@drawable/icon_logo" />

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:id="@+id/issueType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/label_create_page"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolBar" />

            <TextView
                android:id="@+id/typeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(issueDetailViewModel.issueInfo.title)}"
                android:textSize="25sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/issueType"
                tools:text="@string/label_page_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/issueLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/icon_issue_lightgreen"
                android:minHeight="350dp"
                android:paddingBottom="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/typeTitle">

                <TextView
                    android:id="@+id/isseuContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@{issueDetailViewModel.issueInfo.content}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/label_issue_content" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/approveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/skyblue"
                android:text="@string/button_approve"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/issueLayout" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/detailButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/skyblue"
                android:text="@string/button_detail"
                app:cornerRadius="20dp"
                app:layout_constraintTop_toBottomOf="@+id/approveButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>
