<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.thinlineit.ctrlf.page.editor.PageEditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".page.editor.PageEditorActivity"
        android:background="@drawable/background_graphpaper">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            android:elevation="4dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/topicText"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:text="@string/label_topic"
            android:textColor="@color/white"
            android:background="@drawable/background_round_onlyleft_purple"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:elevation="5dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_page"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/topicText"
            app:layout_constraintTop_toTopOf="@+id/topicText"
            android:textStyle="bold"
            android:textSize="16sp"
            android:elevation="5dp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:background="@color/white"
            android:id="@+id/pageText"
            app:layout_constraintEnd_toStartOf="@+id/completeText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_complete"
            app:layout_constraintTop_toTopOf="@+id/pageText"
            app:layout_constraintEnd_toEndOf="@+id/tabLayout"
            android:background="@drawable/background_round_onlyright_purple"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            android:elevation="5dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:id="@+id/completeText"
            android:onClick="@{()->viewModel.complete()}" />

        <com.google.android.material.tabs.TabLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:elevation="1dp"
            android:background="@drawable/background_tab_round_onlytop"
            app:tabGravity="fill"
            app:tabMode="fixed"
            app:tabTextColor="@color/purple"
            app:tabSelectedTextColor="@color/purple"
            app:tabBackground="@drawable/background_selector_tab"
            app:tabIndicatorColor="@color/purple"
            app:layout_constraintTop_toBottomOf="@+id/pageText"
            android:id="@+id/tabLayout">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_edit" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_preview"
                android:id="@+id/previewTab" />
        </com.google.android.material.tabs.TabLayout>

        <FrameLayout
            android:id="@+id/editorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tabLayout">

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </FrameLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
