<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.thinlineit.ctrlf.registration.signin.FindPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_graphpaper">

        <androidx.cardview.widget.CardView
            android:id="@+id/findCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            app:cardCornerRadius="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/backBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="45dp"
                    android:backgroundTint="@color/white"
                    android:src="@drawable/icon_back_button"
                    app:layout_constraintEnd_toStartOf="@id/accountText"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/accountText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:fontFamily="@font/sc_dream_6"
                    android:text="@string/label_enter_verify"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/codeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/sc_dream_3"
                    android:text="@string/notice_check_email_code"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/accountText" />

                <FrameLayout
                    android:id="@+id/codeFrameLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="@+id/codeText"
                    app:layout_constraintStart_toStartOf="@+id/codeText"
                    app:layout_constraintTop_toBottomOf="@+id/codeText"
                    >

                    <EditText
                        android:id="@+id/findCode"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/background_round_white"
                        android:fontFamily="@font/sc_dream_3"
                        android:hint="@string/hint_code"
                        android:paddingStart="10dp"
                        android:singleLine="true"
                        android:text="@={viewModel.code}"
                        android:textSize="12sp"
                        app:onEditorActionListener="@{viewModel.codeInvoke}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{viewModel.countText}"
                        android:textColor="@color/red"
                        android:textSize="12sp"
                        android:fontFamily="@font/sc_dream_5"
                        android:layout_gravity="right|center"
                        tools:text = "@string/label_default_timer"
                        android:paddingEnd="20dp"
                        />
                </FrameLayout>

                <TextView
                    android:id="@+id/findCodeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:text="@{viewModel.codeMessage}"
                    android:textColor="@color/red"
                    android:visibility="gone"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/codeFrameLayout"
                    app:layout_constraintTop_toBottomOf="@+id/codeFrameLayout"
                    tools:text="@string/notice_email_code_check" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/resendCodeButton"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="20dp"
                    android:backgroundTint="@color/skyblue"
                    android:fontFamily="@font/sc_dream_3"
                    android:onClick="@{()->viewModel.sendAuthEmail()}"
                    android:text="@string/button_resend_code"
                    android:textSize="17sp"
                    app:cornerRadius="10dp"
                    app:layout_constraintStart_toStartOf="@+id/codeFrameLayout"
                    app:layout_constraintTop_toBottomOf="@+id/findCodeText" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/confirmCodeBtn"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="@color/skyblue"
                    android:fontFamily="@font/sc_dream_3"
                    android:onClick="@{()->viewModel.checkCodeValid()}"
                    android:text="@string/button_next_wide"
                    android:textSize="17sp"
                    app:cornerRadius="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/codeFrameLayout"
                    app:layout_constraintTop_toBottomOf="@+id/resendCodeButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
